// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: dark 1`] = `
":host {
  display: block;
  position: relative !important;
  transform: translate3d(0,0,0) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  position: relative !important;
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 0 !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #FBFCFF !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -2px !important;
  bottom: -2px !important;
  left: -4px !important;
  right: -4px !important;
  border-radius: 4px !important;
  z-index: -1 !important;
}
::slotted(a:focus)::before,::slotted(button:focus)::before {
  border: 2px solid #0A0AFF !important;
  border-radius: 4px !important;
}
::slotted(a:focus:not(:focus-visible))::before,::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    transition: background var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(126, 127, 130, 0.20) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: 1.5px;
  left: 0;
  bottom: -4px;
  background: #FBFCFF;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  transform: translate3d(0,0,0) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  position: relative !important;
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 0 !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #010205 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -2px !important;
  bottom: -2px !important;
  left: -4px !important;
  right: -4px !important;
  border-radius: 4px !important;
  z-index: -1 !important;
}
::slotted(a:focus)::before,::slotted(button:focus)::before {
  border: 2px solid #0A0AFF !important;
  border-radius: 4px !important;
}
::slotted(a:focus:not(:focus-visible))::before,::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    transition: background var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, 0.20) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: 1.5px;
  left: 0;
  bottom: -4px;
  background: #010205;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: dark 1`] = `
":host {
  display: block;
  position: relative !important;
  transform: translate3d(0,0,0) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  position: relative !important;
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 0 !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #FBFCFF !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -2px !important;
  bottom: -2px !important;
  left: -4px !important;
  right: -4px !important;
  border-radius: 4px !important;
  z-index: -1 !important;
}
::slotted(a:focus)::before,::slotted(button:focus)::before {
  border: 2px solid #0A0AFF !important;
  border-radius: 4px !important;
}
::slotted(a:focus:not(:focus-visible))::before,::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    transition: background var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(126, 127, 130, 0.20) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: 1.5px;
  left: 0;
  bottom: -4px;
  background: #FBFCFF;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  transform: translate3d(0,0,0) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  position: relative !important;
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 0 !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #010205 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -2px !important;
  bottom: -2px !important;
  left: -4px !important;
  right: -4px !important;
  border-radius: 4px !important;
  z-index: -1 !important;
}
::slotted(a:focus)::before,::slotted(button:focus)::before {
  border: 2px solid #0A0AFF !important;
  border-radius: 4px !important;
}
::slotted(a:focus:not(:focus-visible))::before,::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    transition: background var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, 0.20) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: 1.5px;
  left: 0;
  bottom: -4px;
  background: #010205;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: semibold and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  transform: translate3d(0,0,0) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  position: relative !important;
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 0 !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #010205 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -2px !important;
  bottom: -2px !important;
  left: -4px !important;
  right: -4px !important;
  border-radius: 4px !important;
  z-index: -1 !important;
}
::slotted(a:focus)::before,::slotted(button:focus)::before {
  border: 2px solid #0A0AFF !important;
  border-radius: 4px !important;
}
::slotted(a:focus:not(:focus-visible))::before,::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    transition: background var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, 0.20) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: 2px;
  left: 0;
  bottom: -4px;
  background: #010205;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, weight: regular and theme: light 1`] = `
":host {
  display: block;
  position: relative !important;
  transform: translate3d(0,0,0) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a),::slotted(button) {
  display: inline-block !important;
  position: relative !important;
  margin: 0 0 4px 0 !important;
  padding: 0 !important;
  vertical-align: top !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  white-space: nowrap !important;
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  outline: 0 !important;
  outline-offset: 1px !important;
  text-decoration: none !important;
  text-align: left !important;
  border: 0 !important;
  background: transparent !important;
  color: #010205 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  top: -2px !important;
  bottom: -2px !important;
  left: -4px !important;
  right: -4px !important;
  border-radius: 4px !important;
  z-index: -1 !important;
}
::slotted(a:focus)::before,::slotted(button:focus)::before {
  border: 2px solid #0A0AFF !important;
  border-radius: 4px !important;
}
::slotted(a:focus:not(:focus-visible))::before,::slotted(button:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(a:not(:last-child)),::slotted(button:not(:last-child)) {
  margin-right: 16px !important;
}
@media(hover:hover) {
  ::slotted(a)::before, ::slotted(button)::before {
    transition: background var(--p-transition-duration, .24s) ease !important;
  }
  ::slotted(a:hover)::before,::slotted(button:hover)::before {
    -webkit-backdrop-filter: blur(32px) !important;
    backdrop-filter: blur(32px) !important;
    background: rgba(148, 149, 152, 0.20) !important;
  }
}

.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 400;
  font-size: 1rem;
}
.bar {
  display: block;
  position: absolute;
  width: 0;
  height: 1.5px;
  left: 0;
  bottom: -4px;
  background: #010205;
}
.bar--enable-transition {
  will-change: width;
  transition: transform .4s,width .4s;
}
@media(min-width:480px) {
  .scroller {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}

@media(min-width:760px) {
  .scroller {
    font-size: 1rem;
  }
}

@media(min-width:1000px) {
  .scroller {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}

@media(min-width:1300px) {
  .scroller {
    font-size: 1rem;
  }
}

@media(min-width:1760px) {
  .scroller {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}
"
`;
